# simpler

./: summary.md
docs/: request-session.md
examples/a2a3/replay_graph/batch_paged_attention_three_loop/: test_batch_paged_attention_three_loop.py
examples/a2a3/replay_graph/batch_paged_attention_three_loop/kernels/orchestration/: paged_attention_orch.cpp
examples/a2a3/replay_graph/batch_paged_attention_two_loop/: test_batch_paged_attention_two_loop.py
examples/a2a3/replay_graph/batch_paged_attention_two_loop/kernels/orchestration/: paged_attention_orch.cpp
examples/a2a3/replay_graph/benchmark_bgemm/: test_benchmark_bgemm.py
examples/a2a3/replay_graph/paged_attention_unroll_manual_scope/: test_paged_attention_unroll.py
examples/a2a3/replay_graph/qwen3_14b_decode_1layer/: test_qwen3_14b_decode.py
examples/a2a3/replay_graph/qwen3_14b_decode_2layer/: test_qwen3_14b_decode.py
examples/a2a3/replay_graph/qwen3_14b_decode_2layer/kernels/orchestration/: decode_fwd_layers.cpp
examples/a2a3/replay_graph/qwen3_14b_decode_3layer/: README.md
examples/a2a3/replay_graph/qwen3_14b_decode_3layer/kernels/orchestration/: decode_fwd_layers.cpp
python/bindings/: task_interface.cpp
python/simpler/: remote_l3_protocol.py  remote_l3_session.py  request_session.py  worker.py
simpler_setup/: kernel_compiler.py  scene_test.py
src/a2a3/docs/: runtimes.md
src/a2a3/platform/include/aicpu/: l2_swimlane_collector_aicpu.h
src/a2a3/platform/include/common/: platform_config.h
src/a2a3/platform/onboard/host/: device_runner.cpp
src/a2a3/platform/sim/host/: device_runner.cpp
src/a2a3/runtime/host_build_graph/host/: runtime_maker.cpp
src/a2a3/runtime/replay_graph/: build_config.py
src/a2a3/runtime/replay_graph/aicpu/: aicpu_executor.cpp
src/a2a3/runtime/replay_graph/common/: pto_runtime_status.h
src/a2a3/runtime/replay_graph/docs/: RUNTIME_LOGIC.md  SUBMIT_BY_CLUSTER.md  device_log_profiling.md  profiling_levels.md
src/a2a3/runtime/replay_graph/host/: dep_gen_replay.cpp  dep_gen_replay.h  host_graph.cpp  host_graph.h  runtime_maker.cpp
src/a2a3/runtime/replay_graph/host_orch_runtime/: host_orch_compat_stubs.cpp  platform_regs_host_stubs.cpp  pto_orchestrator_host.cpp  pto_runtime2_host.cpp
src/a2a3/runtime/replay_graph/orchestration/: pto_orchestration_api.h
src/a2a3/runtime/replay_graph/runtime/: pto_async_wait.h  pto_dep_compute.h  pto_graph_cache.h  pto_orchestrator.cpp  pto_orchestrator.h  pto_ring_buffer.cpp  pto_ring_buffer.h  pto_runtime2.cpp  pto_runtime2.h  pto_runtime2_types.h  pto_shared_memory.h  pto_tensormap.h  pto_types.h  runtime.h
src/a5/platform/onboard/aicpu/: kernel.cpp
src/a5/runtime/host_build_graph/runtime/: runtime.h
src/a5/runtime/tensormap_and_ringbuffer/host/: runtime_maker.cpp
src/common/hierarchical/: remote_wire.cpp
src/common/log/include/common/: strace.h
src/common/platform/include/common/: host_api.h
src/common/platform/onboard/host/: c_api_shared.cpp  device_runner_base.cpp  device_runner_base.h
src/common/platform/sim/host/: c_api_shared.cpp  device_runner_base.cpp  device_runner_base.h
src/common/task_interface/: call_config.h  prepare_callable_common.h
src/common/worker/: chip_worker.cpp  chip_worker.h
tests/st/a2a3/replay_graph/alternating_matmul_add/: test_alternating_matmul_add.py
tests/st/a2a3/replay_graph/batch_paged_attention/: test_batch_paged_attention.py
tests/st/a2a3/replay_graph/dummy_task/: test_dummy_task.py
tests/st/a2a3/replay_graph/paged_attention_unroll/: test_paged_attention_unroll.py
tests/st/a2a3/replay_graph/spmd_paged_attention/: test_spmd_paged_attention.py
tests/ut/cpp/: CMakeLists.txt
tests/ut/cpp/a2a3/replay_graph/: CMakeLists.txt  test_dep_list_pool.cpp  test_orchestrator_fanin.cpp  test_scheduler_state.cpp  test_scope_stats_collector.cpp  test_shared_memory.cpp  test_single_shot.cpp  test_task_allocator.cpp  test_task_state.cpp  test_tensormap.cpp  test_wiring.cpp
tests/ut/py/: test_chip_worker.py
tests/ut/py/test_worker/: test_host_worker.py  test_request_session.py
tools/: benchmark_rounds.sh  host_orch_perfetto.py
(+12 files in other folders)
